--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center white-text">
+<div class="text-center">
   <h1 class="text-center">Welcome to Suck That Cocktail</h1>
   <p class="text-center">See our cocktails below! </p>
 </div>
