--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,9 +4,10 @@
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative:900|Doppio+One|Droid+Serif:700');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono');
 
-$base-font: 'Cinzel Decorative', cursive;
-$header-font: 'Droid Serif', serif;
+$base-font: 'Droid Serif', serif;
+$header-font: 'Space Mono', monospace;
 // Local fonts (uncomment following lines)
 // @font-face {
 //   font-family: "Font Name";
