--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,10 +1,10 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #C5C0D0;
   transition: all 0.3s ease;
   display: flex;
-  height: 70px;
+  height: 50px;
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
@@ -128,4 +128,9 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.btn-primary {
+  background-color: #40539F;
+  border: none;
 }
