--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,48 +1,44 @@
-<div class="wrapper" style="background-image: url('<%= image_path 'bkgrnd4.jpg' %>');">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-6 col-xs-offset-3">
-        <div class="card-show" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path @cocktail.image_url%>')">
-          <h1 class="text-center">
-            <%= @cocktail.name %>
-          </h1>
-        </div>
+<div class="purple-background">
+  <div id="sidebar">
+  <div class="button-card">
+      <p>
+        <%= link_to "Back to Home", cocktails_path %>
+      </p>
+      <p>
+        <%= link_to  "Delete this Cocktail", cocktail_path(@cocktail), method: :delete %>
+      </p>
+    </div>
+  </div>
+  <div class="photo-card">
+    <% if @cocktail.photo.url %>
+    <div class="card-show" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path @cocktail.photo %>')">
+      <% else %>
+      <div class="card-show" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path 'add-drink.jpg'%>')">
+        <% end %>
+        <h1 class="text-center">
+          <%= @cocktail.name %>
+        </h1>
       </div>
     </div>
+  </div>
+  <div class="ingredients">
+    <% @cocktail.doses.each do |dose| %>
+    <div class="text-center">
+      <%= dose.ingredient.name %> (<%= dose.description %>)
     </div>
-    <div class="container">
-      <div class="row card-dose">
-        <div class="col-xs-6 col-xs-offset-3">
-          <% @cocktail.doses.each do |dose| %>
-          <div class="text-center"><%= dose.ingredient.name %> (<%= dose.description %>)</div>
-          <% end %>
-        </div>
+    <% end %>
+    <h3 class="text-center card-rose-text">
+      Add ingredients to this cocktail
+    </h3>
+    <div class="dose-form">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :ingredient_id, collection: Ingredient.all.order('name ASC'), prompt: "Pick your ingredient"%>
+      <%= f.input :description, placeholder: "5 cl"%>
+      <div class=" text-center">
+        <%= f.submit "Add Ingredient", class: "btn btn-primary" %>
       </div>
     </div>
-    </div>
-    <div class="container">
-      <div class="row card-rose-text">
-        <div class="col-xs-6 col-xs-offset-3">
-          <h3 class="text-center">
-            Add ingredients to this cocktail
-          </h3>
-          <div class="dose-form">
-            <%= simple_form_for [@cocktail, @dose] do |f| %>
-            <%= f.input :ingredient_id, collection: Ingredient.all.order('name ASC'), prompt: "Pick your ingredient"%>
-            <%= f.input :description, placeholder: "5 cl"%>
-            <div class=" text-center">
-              <%= f.submit "Add Ingredient", class: "btn btn-primary" %>
-            </div>
-          </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row card-rose-text">
-        <div class="col-xs-6 col-xs-offset-3 text-center">
-          <%= link_to "Back to Cocktails List", cocktails_path %> |
-          <%= link_to  "Delete this cocktail", cocktail_path(@cocktail), method: :delete %>
-        </div>
-      </div>
-    </div>
+    <% end %>
+  </div>
+</div>
+
